GoNoGo/force-app/main/default/objects/Go_No_Go_Answer__c/fields/Go_No_Go_Score__c.field-meta.xml
<CustomField>
    <fullName>Go_No_Go_Score__c</fullName>
    <description>Stores the Go/No-Go Score.</description>
    <label>Final Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>