GoNoGo/force-app/main/default/objects/Go_No_Go_Answer__c/fields/Go_No_Go_Status__c.field-meta.xml
<CustomField>
    <fullName>Go_No_Go_Status__c</fullName>
    <description>Stores the Go/No-Go Status.</description>
    <formula>IF( ISBLANK(Static_Resource_Name__c) , Status_Label__c, IMAGE(&quot;/resource/&quot; +  Static_Resource_Name__c , &quot;Status&quot;, 30, 30) + &quot; &quot; +  Status_Label__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>