GoNoGo/force-app/main/default/objects/Go_No_Go_Answer__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Go/No-Go Submissions</relationshipLabel>
    <relationshipName>Go_No_Go_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>