GoNoGo/force-app/main/default/objects/Go_No_Go_Answer__c/fields/Static_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Static_Resource_Name__c</fullName>
    <description>To store static resource name for color.</description>
    <label>Static Resource Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>