GoNoGo/force-app/main/default/objects/Go_No_Go_Answer__c/fields/Status_Label__c.field-meta.xml
<CustomField>
    <fullName>Status_Label__c</fullName>
    <label>Status Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>