GoNoGo/force-app/main/default/objects/Go_No_Go_Answer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Go_No_Go_Score__c</columns>
    <columns>Go_No_Go_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>